log
mi., 20 de abr. de 2022  9:49:47: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
e08b091
mi., 20 de abr. de 2022  9:50:17: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
92eb910
mi., 20 de abr. de 2022 10:06:39: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:80:13: error: too few arguments to function 'is_equal'
         if (is_equal(key, tree->current->pair->key) == 1)
             ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
treemap.c:90:16: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return tree->current;
            ~~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a916ddf
mi., 20 de abr. de 2022 10:07:42: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:80:13: error: too few arguments to function 'is_equal'
         if (is_equal(key, tree->current->pair->key) == 1)
             ^~~~~~~~
treemap.c:22:5: note: declared here
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
Compilation failed
5fec845
mi., 20 de abr. de 2022 10:08:19: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
b626746
mi., 20 de abr. de 2022 10:09:23: 
 treemap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|6
total_score: 15/70
7540d46
mi., 20 de abr. de 2022 10:21:49: 
 treemap.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  13|5
total_score: 25/70
12c9a03
mi., 20 de abr. de 2022 10:24:48: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  15|4
total_score: 25/70
9953d1c
